--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -64,6 +64,25 @@
   height: 100px;
   background-color: #FFFFFF;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.chat_name{
+  padding-top: 36px;
+  font-size: 24px;
+  color: #333;
+}
+
+.chat_end{
+  margin-top: 40px;
+}
+
+.chat_end a{
+  border: 1px solid darkred;
+  text-decoration: none;
+  padding: 20px;
+  color: darkred;
 }
 
 .chat_text{
@@ -74,8 +93,49 @@
 }
 
 .chat_bottom{
-  width: 100%;
   height: 90px;
   background-color: #DDDDDD;
   padding: 20px 40px;
+  display: flex;
 }
+
+.contact-form{
+  width: 100%;
+  background-color: white;
+  display: flex;
+}
+
+.name-form{
+  width: 100%;
+  height: 50px;
+  padding-left: 10px;
+  border: none;
+}
+
+.send{
+  background-color: #38AEF0;
+  border: none;
+  padding: 0 20px;
+  margin-left: 15px;
+}
+
+.form-image{
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden{
+  display: none;
+}
+
+
+
+
+
+
+
