--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,24 @@
 <div class="chat_top">
+  <div class="left-header">
+    <div class="chat_name">
+      hogefuga
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="chat_end">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
 </div>
 <div class="chat_text">
 </div>
 <div class="chat_bottom">
+    <div class="contact-form">
+      <input type="text" placeholder="type a meaasge" class= "name-form">
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <input type="file" class="hidden">
+      </label>      
+    </div>
+    <input type="submit" value="送信" class="send">
 </div>
