--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -90,33 +90,66 @@
   height: calc(100vh - 190px);
   background-color: #FAFAFA;
   padding: 46px 40px 0 ;
+  overflow: scroll;
 }
 
-.chat_bottom{
-  height: 90px;
+.message {
+  margin: 10px 0 0 0;
+}
+
+.upper-message{
+  display: flex;
+}
+
+.message-user {
+  color: #434a54;
+  font-size: 16px;
+}
+
+.message-date {
+  color: #999;
+  font-size: 12px;
+  padding-left: 10px;
+}
+
+.lower-message {
+  margin-top: 10px;
+}
+
+.message-content {
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
+.form {
   background-color: #DDDDDD;
+  height: 90px;
   padding: 20px 40px;
   display: flex;
 }
 
-.contact-form{
-  width: 100%;
+.form-input {
   background-color: white;
+  width: 100%;
   display: flex;
 }
 
-.name-form{
-  width: 100%;
-  height: 50px;
-  padding-left: 10px;
+.form-message {
   border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
 }
 
-.send{
+.form-submit {
   background-color: #38AEF0;
   border: none;
-  padding: 0 20px;
+  color: white;
+  font-size: 16px;
+  height: 50px;
   margin-left: 15px;
+  padding: 0 20px;
 }
 
 .form-image{
