--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -11,18 +11,8 @@
   </div>
 </div>
 <div class="chat_text">
+  <%= render partial: 'message', collection: @messages %>
 </div>
-<div class="chat_bottom">
-    <div class="contact-form">
-      <input type="text" placeholder="type a meaasge" class= "name-form">
-      <label class="form-image">
-        <span class="image-file">画像</span>
-        <input type="file" class="hidden">
-      </label>      
-    </div>
-    <input type="submit" value="送信" class="send">
-</div>
-
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
     <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
@@ -33,3 +23,4 @@
   </div>
   <%= f.submit '送信', class: 'form-submit' %>
 <% end %>
+
