--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat_top">
   <div class="left-header">
     <div class="chat_name">
-      hogefuga
+      <%= @room.name %>
     </div>
   </div>
   <div class="right-header">
